@@ -43,10 +43,11 @@
   - x add (frac, frac)
   - x add (frac, whole)
   - x add (whole, frac)
-  - new(integer)
-  - sub (frac, frac)
-  - sub (frac, whole)
-  - sub (whole, frac)
+  - x new(integer)
+  - x sub (frac, frac)
+  - x sub (frac, whole)
+  - x sub (whole, frac)
+  - 
   - mult (frac, frac)
   - mult (frac, whole)
   - mult (whole, frac)
