@@ -20,6 +20,7 @@
 
  - `Chunky.Fraction` module for manipulating fractions
   - `new/2` - create a new fraction
+  - `new/1` - create a new fraction from a tuple or integer
   - `has_whole?/1` - fractions is greater than 1, and has a whole component
   - `is_whole?/1` - does a fraction exactly represent a whole number
   - `components/1` - tuple of numerator an denominator
@@ -29,8 +30,9 @@
   - `is_simplified?/1` - is fraction in reduced form?
   - `simplify/1` - reduce fraction
   - `is_zero?/1` - does fraction represent zero?
-  - `add/2` - Add two fractions, or a fraction and an integer
-  
+  - `add/3` - Add two fractions, or a fraction and an integer
+  - `subtract/3` - Subtract two fractions, or a fraction and an integer
+
  - `Chunky.Grid` module for working with two dimensional data
   - `Grid.new/3` - generate a grid from a value or a function
   - `Grid.get_at/2` and `Grid.get_at/3` - access cell value by 2d index
